hphp/test/zend/bad/ext/spl/tests/SplFixedArray_setSize_param_float.php
<?php
$fixed_array = new SplFixedArray(2);
$fixed_array->setSize(3.14159);
var_dump($fixed_array);
?>